--- a/master.css
+++ b/master.css
@@ -67,7 +67,8 @@ input[type=submit]:hover {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-    max-width: 400px;
+    max-width: 800px
+    ;
 
 }
 * {
@@ -100,7 +101,10 @@ input[type=submit]:hover {
 .container {
     border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 10px;
+    margin: auto;
+   width: 70%;
+   border: 3px ;
+   padding: 10px;
 }
 
 /* Create two columns that float next to eachother */
